--- a/exercises/java-exceptions/pom.xml
+++ b/exercises/java-exceptions/pom.xml
@@ -46,6 +46,18 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+    
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.13.0</version>
+      </dependency>
+    
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.4.4.Final</version>
+      </dependency>
     </dependencies>
 
     <build>
